add bascet button to index page and cross button to bascet page

--- a/Bascet/bascet.html
+++ b/Bascet/bascet.html
@@ -17,6 +17,9 @@
                     <div class="header-bascet-count">Кількість</div>
                     <div class="header-bascet-price">Вартість</div>
                 </div>
+                <div class="header-bascet-cross">
+                    <img src="../Image/icon/cross.svg" alt="cross">
+                </div>
             </div>
         </header>
 
