--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
                 <img src="./Image/icon/search.svg" alt="search">
             </div>
         </div>
+        <div class="logo-bascet">
+            <img src="./Image/icon/bascet.svg" alt="bascet">
+            <div class="logo-bascet-count">0</div>
+        </div>
     </header>
 
     <main class="main">
@@ -48,7 +52,7 @@
         </section>
         <section class="section-two">
             <div class="cards">
-                
+
             </div>
         </section>
 
@@ -78,16 +82,16 @@
                             src="./image/icon/twitter.svg" alt="twiter"></a>
                 </li>
                 <li>
-                    <a href="https://www.instagram.com/" target="_blank"><img class="icon" 
-                        src="./image/icon/instagram.svg" alt="instagram"></a>
+                    <a href="https://www.instagram.com/" target="_blank"><img class="icon"
+                            src="./image/icon/instagram.svg" alt="instagram"></a>
                 </li>
                 <li>
-                    <a href="https://web.telegram.org/" target="_blank"><img class="icon" 
-                        src="./Image/icon/telegram.svg" alt="telegram"></a>
+                    <a href="https://web.telegram.org/" target="_blank"><img class="icon"
+                            src="./Image/icon/telegram.svg" alt="telegram"></a>
                 </li>
                 <li>
-                    <a href="https://www.viber.com/" target="_blank"><img class="icon" 
-                        src="./image/icon/viber.svg" alt="viber"></a>
+                    <a href="https://www.viber.com/" target="_blank"><img class="icon" src="./image/icon/viber.svg"
+                            alt="viber"></a>
                 </li>
             </ul>
         </div>
@@ -106,7 +110,7 @@
             </div>
         </div>
     </footer>
-    
+
     <script src="./Code/catalog-candies-in-boxes.js"></script>
     <script src="./Code/catalog-fruit-candies.js"></script>
     <script src="./Code/catalog-gift-sets.js"></script>
