rename another files , add product filters and remove rendom products from index

--- a/Bascet/bascet-index.html
+++ b/Bascet/bascet-index.html
@@ -44,7 +44,7 @@
     </div>
 
     <script src="../Code/bascet.js"></script>
-    <script src="../Code/bascet-page.js"></script>
+    <script src="../Code/bascet-index.js"></script>
 </body>
 
 </html>
