--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
             <div class="filter">
                 <div>Фільтр:</div>
                 <div class="filter-checkbox">
-                    <div><input type="checkbox">Фруктові цукерки</div>
-                    <div><input type="checkbox">Цукерки в коробках</div>
-                    <div><input type="checkbox">Подарункові набори</div>
+                    <div><input class="fruit-candy" type="checkbox" />Фруктові цукерки</div>
+                    <div><input class="candies-in-boxes" type="checkbox" />Цукерки в коробках</div>
+                    <div><input class="gift-sets" type="checkbox" />Подарункові набори</div>
                 </div>
             </div>
             <div class="price">
@@ -114,6 +114,7 @@
     <script src="./Code/catalog-candies-in-boxes.js"></script>
     <script src="./Code/catalog-fruit-candies.js"></script>
     <script src="./Code/catalog-gift-sets.js"></script>
+    <script src="./Code/product-filter.js"></script>
     <script src="./Code/product.js"></script>
     <script src="./Code/product-card.js"></script>
     <script src="./Code/product-manager.js"></script>
