add changes to header and footer to html

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <header class="header">
         <nav class="header-navigation">
             <ul>
-                <li>Товари</li>
-                <li>Про нас</li>
+                <li><a href="#">Товари</a></li>
+                <li><a href="#">Про нас</a></li>
             </ul>
         </nav>
         <img id="logo"
@@ -36,16 +36,16 @@
             <div class="filter">
                 <div>Фільтр:</div>
                 <div class="filter-checkbox">
-                    <div><input class="fruit-candy" type="checkbox" />Фруктові цукерки</div>
-                    <div><input class="candies-in-boxes" type="checkbox" />Цукерки в коробках</div>
-                    <div><input class="gift-sets" type="checkbox" />Подарункові набори</div>
+                    <div><input class="fruit-candy" type="checkbox" /><span>Фруктові цукерки</span></div>
+                    <div><input class="candies-in-boxes" type="checkbox" /><span>Цукерки в коробках</span></div>
+                    <div><input class="gift-sets" type="checkbox" /><span>Подарункові набори</span></div>
                 </div>
             </div>
             <div class="price">
                 <div>Ціна:</div>
                 <div class="price_input">
                     <input class="price_start" type="number" value="10">
-                    <input class="price_final" type="number" value="50">
+                    <input class="price_final" type="number" value="500">
                     <input type="submit" value="ok">
                 </div>
             </div>
@@ -90,8 +90,8 @@
                             src="./Image/icon/telegram.svg" alt="telegram"></a>
                 </li>
                 <li>
-                    <a href="https://www.viber.com/" target="_blank"><img class="icon" src="./image/icon/viber.svg"
-                            alt="viber"></a>
+                    <a href="https://www.viber.com/" target="_blank"><img class="icon" 
+                        src="./image/icon/viber.svg" alt="viber"></a>
                 </li>
             </ul>
         </div>
@@ -102,7 +102,7 @@
                 <a href="https://www.google.com/intl/ua/gmail/about/" target="_blank">sweetshop@gmail.com</a>
             </div>
             <div class="footer-address">
-                <div>Адреса:</div>
+                <div>Адреса магазину:</div>
                 <a href="https://www.google.com.ua/maps/@50.4573957,30.6012549,15.81z?entry=ttu&g_ep=EgoyMDI0MDgyMy4wIKXMDSoASAFQAw%3D%3D"
                     target="_blank">
                     Україна, м. Київ, проспект Визволителів, буд, 5
