--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Sweet shop</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./Style/style.css">
+    <link rel="stylesheet" href="./Style/media.css">
 </head>
 
 <body>
