add bascet and saving products data to session storage

--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
     <script src="./Code/catalog-candies-in-boxes.js"></script>
     <script src="./Code/catalog-fruit-candies.js"></script>
     <script src="./Code/catalog-gift-sets.js"></script>
+    <script src="./Code/bascet.js"></script>
     <script src="./Code/product-filter.js"></script>
     <script src="./Code/product.js"></script>
     <script src="./Code/product-card.js"></script>
