update bascet and saving products data to session storage

--- a/Bascet/bascet-index.html
+++ b/Bascet/bascet-index.html
@@ -17,9 +17,9 @@
                     <div class="header-bascet-count">Кількість</div>
                     <div class="header-bascet-price">Вартість</div>
                 </div>
-                <div class="header-bascet-cross">
+                <a class="header-bascet-cross" href="../index.html">
                     <img src="../Image/icon/cross.svg" alt="cross">
-                </div>
+                </a>
             </div>
         </header>
 
@@ -43,7 +43,16 @@
         </footer>
     </div>
 
+    <script src="../Code/catalog-candies-in-boxes.js"></script>
+    <script src="../Code/catalog-fruit-candies.js"></script>
+    <script src="../Code/catalog-gift-sets.js"></script>
+    <script src="../Code/constants.js"></script>
+    <script src="../Code/product.js"></script>
+    <script src="../Code/product-card.js"></script>
+    <script src="../Code/product-manager.js"></script>
+    <script src="../Code/product-card-manager.js"></script>
     <script src="../Code/bascet.js"></script>
+    <script src="../Code/bascet-manager.js"></script>
     <script src="../Code/bascet-index.js"></script>
 </body>
 
