--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                 <img src="./Image/icon/search.svg" alt="search">
             </div>
         </div>
-        <div class="logo-bascet">
+        <a class="logo-bascet" href="./Bascet/bascet-index.html">
             <img src="./Image/icon/bascet.svg" alt="bascet">
             <div class="logo-bascet-count">0</div>
-        </div>
+        </a>
     </header>
 
     <main class="main">
@@ -115,7 +115,9 @@
     <script src="./Code/catalog-candies-in-boxes.js"></script>
     <script src="./Code/catalog-fruit-candies.js"></script>
     <script src="./Code/catalog-gift-sets.js"></script>
+    <script src="./Code/constants.js"></script>
     <script src="./Code/bascet.js"></script>
+    <script src="./Code/bascet-manager.js"></script>
     <script src="./Code/product-filter.js"></script>
     <script src="./Code/product.js"></script>
     <script src="./Code/product-card.js"></script>
