--- a/Bascet/bascet-index.html
+++ b/Bascet/bascet-index.html
@@ -43,17 +43,17 @@
         </footer>
     </div>
 
-    <script src="../Code/catalog-candies-in-boxes.js"></script>
-    <script src="../Code/catalog-fruit-candies.js"></script>
-    <script src="../Code/catalog-gift-sets.js"></script>
-    <script src="../Code/constants.js"></script>
-    <script src="../Code/product.js"></script>
-    <script src="../Code/product-card.js"></script>
-    <script src="../Code/product-manager.js"></script>
-    <script src="../Code/product-card-manager.js"></script>
-    <script src="../Code/bascet.js"></script>
-    <script src="../Code/bascet-manager.js"></script>
-    <script src="../Code/bascet-index.js"></script>
+    <script type="module" src="../Code/catalog-candies-in-boxes.js"></script>
+    <script type="module" src="../Code/catalog-fruit-candies.js"></script>
+    <script type="module" src="../Code/catalog-gift-sets.js"></script>
+    <script type="module" src="../Code/constants.js"></script>
+    <script type="module" src="../Code/product.js"></script>
+    <script type="module" src="../Code/product-card.js"></script>
+    <script type="module" src="../Code/product-manager.js"></script>
+    <script type="module" src="../Code/product-card-manager.js"></script>
+    <script type="module" src="../Code/bascet.js"></script>
+    <script type="module" src="../Code/bascet-manager.js"></script>
+    <script type="module" src="../Code/bascet-index.js"></script>
 </body>
 
 </html>
