add confirm and reset button to product filter

--- a/index.html
+++ b/index.html
@@ -45,10 +45,13 @@
             <div class="price">
                 <div>Ціна:</div>
                 <div class="price_input">
-                    <input class="price_start" type="number" value="10">
-                    <input class="price_final" type="number" value="500">
-                    <input type="submit" value="ok">
+                    <input class="price_min" type="number" />
+                    <input class="price_max" type="number" />
+                    <input class="price_confirm" type="submit" value="ok" />
                 </div>
+            </div>
+            <div class="reset">
+                <input class="reset_btn" type="button" value="Очистити фільтр" />                
             </div>
         </section>
         <section class="section-two">
