replacing css-class names

--- a/Bascet/bascet-index.html
+++ b/Bascet/bascet-index.html
@@ -11,32 +11,32 @@
 <body>
     <div class="bascet">
         <header>
-            <div class="header-bascet">
-                <div class="header-bascet-name">Кошик</div>
-                <div class="header-bascet-group">
-                    <div class="header-bascet-count">Кількість</div>
-                    <div class="header-bascet-price">Вартість</div>
+            <div class="header_bascet">
+                <div class="header_bascet_name">Кошик</div>
+                <div class="header_bascet_group">
+                    <div class="header_bascet_count">Кількість</div>
+                    <div class="header_bascet_price">Вартість</div>
                 </div>
-                <a class="header-bascet-cross" href="../index.html">
+                <a class="header_bascet_cross" href="../index.html">
                     <img src="../Image/icon/cross.svg" alt="cross">
                 </a>
             </div>
         </header>
 
-        <main class="main-bascet">
+        <main class="main_bascet">
 
         </main>
 
         <footer>
-            <div class="footer-bascet">
-                <div class="footer-bascet-group">
-                    <div class="footer-bascet-name">Разом:</div>
-                    <div class="footer-bascet-price">
+            <div class="footer_bascet">
+                <div class="footer_bascet_group">
+                    <div class="footer_bascet_name">Разом:</div>
+                    <div class="footer_bascet_price">
                         <span>0</span>
                         <div>грн</div>
                     </div>
                 </div>
-                <div class="footer-bascet-button">
+                <div class="footer_bascet_button">
                     <button>Оформити замовлення</button>
                 </div>
             </div>
