--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="header">
-        <nav class="header-navigation">
+        <nav class="header_navigation">
             <ul>
                 <li><a href="#">Товари</a></li>
                 <li><a href="#">Про нас</a></li>
@@ -20,26 +20,26 @@
         </nav>
         <img id="logo"
             src="https://img3.stockfresh.com/files/b/butenkow/m/14/7064478_stock-vector-vector-logo-chocolate.jpg">
-        <div class="search-box">
+        <div class="search_box">
             <input type="search" class="search" list="product-names" placeholder="Search">
-            <div class="search-btn">
+            <div class="search_btn">
                 <img src="./Image/icon/search.svg" alt="search">
             </div>
         </div>
-        <a class="logo-bascet" href="./Bascet/bascet-index.html">
+        <a class="logo_bascet" href="./Bascet/bascet-index.html">
             <img src="./Image/icon/bascet.svg" alt="bascet">
-            <div class="logo-bascet-count">0</div>
+            <div class="logo_bascet_count">0</div>
         </a>
     </header>
 
     <main class="main">
-        <section class="section-one">
+        <section class="section_one">
             <div class="filter">
                 <div>Фільтр:</div>
-                <div class="filter-checkbox">
-                    <div><input class="fruit-candy" type="checkbox" /><span>Фруктові цукерки</span></div>
-                    <div><input class="candies-in-boxes" type="checkbox" /><span>Цукерки в коробках</span></div>
-                    <div><input class="gift-sets" type="checkbox" /><span>Подарункові набори</span></div>
+                <div class="filter_checkbox">
+                    <div><input class="fruit_candy" type="checkbox" /><span>Фруктові цукерки</span></div>
+                    <div><input class="candies_in_boxes" type="checkbox" /><span>Цукерки в коробках</span></div>
+                    <div><input class="gift_sets" type="checkbox" /><span>Подарункові набори</span></div>
                 </div>
             </div>
             <div class="price">
@@ -54,7 +54,7 @@
                 <input class="reset_btn" type="button" value="Очистити фільтр" />                
             </div>
         </section>
-        <section class="section-two">
+        <section class="section_two">
             <div class="cards">
 
             </div>
@@ -63,7 +63,7 @@
     </main>
 
     <footer class="footer">
-        <div class="footer-contacts">
+        <div class="footer_contacts">
             <div>Контактна інформація:</div>
             <div>
                 <ul>
@@ -74,7 +74,7 @@
             </div>
         </div>
 
-        <div class="footer-messenger">
+        <div class="footer_messenger">
             <div>Ми в соцмережах:</div>
             <ul>
                 <li>
@@ -100,12 +100,12 @@
             </ul>
         </div>
 
-        <div class="footer-information">
-            <div class="footer-email">
+        <div class="footer_information">
+            <div class="footer_email">
                 <div>Електронна пошта:</div>
                 <a href="https://www.google.com/intl/ua/gmail/about/" target="_blank">sweetshop@gmail.com</a>
             </div>
-            <div class="footer-address">
+            <div class="footer_address">
                 <div>Адреса магазину:</div>
                 <a href="https://www.google.com.ua/maps/@50.4573957,30.6012549,15.81z?entry=ttu&g_ep=EgoyMDI0MDgyMy4wIKXMDSoASAFQAw%3D%3D"
                     target="_blank">
