add product searching and sorting

--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
     <script type="module" src="./Code/bascet.js"></script>
     <script type="module" src="./Code/bascet-manager.js"></script>
     <script type="module" src="./Code/product-filter.js"></script>
+    <script type="module" src="./Code/product-search.js"></script>
     <script type="module" src="./Code/product.js"></script>
     <script type="module" src="./Code/product-card.js"></script>
     <script type="module" src="./Code/product-manager.js"></script>
