relocate bascet.index code to main index

--- a/Bascet/bascet-index.html
+++ b/Bascet/bascet-index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bascet</title>
     <link rel="stylesheet" href="./Style/bascet.css">
+    <link rel="stylesheet" href="../Style/media.css">
 </head>
 
 <body>
-    <div class="bascet">
+    <section class="bascet">
         <header>
             <div class="header_bascet">
                 <div class="header_bascet_name">Кошик</div>
@@ -41,7 +42,7 @@
                 </div>
             </div>
         </footer>
-    </div>
+    </section>
 
     <script type="module" src="../Code/catalog-candies-in-boxes.js"></script>
     <script type="module" src="../Code/catalog-fruit-candies.js"></script>
