--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Sweet shop</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./Style/style.css">
+    <link rel="stylesheet" href="./Style/bascet.css">
     <link rel="stylesheet" href="./Style/media.css">
 </head>
 
@@ -18,18 +19,22 @@
                 <li><a href="#">Про нас</a></li>
             </ul>
         </nav>
-        <img id="logo"
-            src="https://img3.stockfresh.com/files/b/butenkow/m/14/7064478_stock-vector-vector-logo-chocolate.jpg">
-        <div class="search_box">
-            <input type="search" class="search" list="product-names" placeholder="Search">
-            <div class="search_btn">
-                <img src="./Image/icon/search.svg" alt="search">
-            </div>
+        <div class="header_logo">
+            <img id="logo"
+                src="https://img3.stockfresh.com/files/b/butenkow/m/14/7064478_stock-vector-vector-logo-chocolate.jpg">
         </div>
-        <a class="logo_bascet" href="./Bascet/bascet-index.html">
-            <img src="./Image/icon/bascet.svg" alt="bascet">
-            <div class="logo_bascet_count">0</div>
-        </a>
+        <div class="header_box">
+            <div class="search_box">
+                <input type="search" class="search" list="product-names" placeholder="Search">
+                <div class="search_btn">
+                    <img src="./Image/icon/search.svg" alt="search">
+                </div>
+            </div>
+            <a class="logo_bascet">
+                <img src="./Image/icon/bascet.svg" alt="bascet">
+                <div class="logo_bascet_count">0</div>
+            </a>
+        </div>
     </header>
 
     <main class="main">
@@ -51,12 +56,48 @@
                 </div>
             </div>
             <div class="reset">
-                <input class="reset_btn" type="button" value="Очистити фільтр" />                
+                <input class="reset_btn" type="button" value="Очистити фільтр" />
             </div>
         </section>
         <section class="section_two">
             <div class="cards">
 
+            </div>
+        </section>
+
+        <section class="bascet_modal">
+            <div class="bascet">
+                <header>
+                    <div class="header_bascet">
+                        <div class="header_bascet_name">Кошик</div>
+                        <div class="header_bascet_group">
+                            <div class="header_bascet_count">Кількість</div>
+                            <div class="header_bascet_price">Вартість</div>
+                        </div>
+                        <a class="header_bascet_cross">
+                            <img src="./Image/icon/cross.svg" alt="cross">
+                        </a>
+                    </div>
+                </header>
+
+                <main class="main_bascet">
+
+                </main>
+
+                <footer>
+                    <div class="footer_bascet">
+                        <div class="footer_bascet_group">
+                            <div class="footer_bascet_name">Разом:</div>
+                            <div class="footer_bascet_price">
+                                <span>0</span>
+                                <div>грн</div>
+                            </div>
+                        </div>
+                        <div class="footer_bascet_button">
+                            <button>Оформити замовлення</button>
+                        </div>
+                    </div>
+                </footer>
             </div>
         </section>
 
@@ -94,8 +135,8 @@
                             src="./Image/icon/telegram.svg" alt="telegram"></a>
                 </li>
                 <li>
-                    <a href="https://www.viber.com/" target="_blank"><img class="icon" 
-                        src="./image/icon/viber.svg" alt="viber"></a>
+                    <a href="https://www.viber.com/" target="_blank"><img class="icon" src="./image/icon/viber.svg"
+                            alt="viber"></a>
                 </li>
             </ul>
         </div>
