update html and css code

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav class="header_navigation">
             <ul>
                 <li><a href="#">Товари</a></li>
-                <li><a href="#">Про нас</a></li>
+                <li><a href="#footer">Про нас</a></li>
             </ul>
         </nav>
         <div class="header_logo">
@@ -30,10 +30,10 @@
                     <img src="./Image/icon/search.svg" alt="search">
                 </div>
             </div>
-            <a class="logo_bascet">
+            <div class="logo_bascet">
                 <img src="./Image/icon/bascet.svg" alt="bascet">
                 <div class="logo_bascet_count">0</div>
-            </a>
+            </div>
         </div>
     </header>
 
@@ -74,9 +74,9 @@
                             <div class="header_bascet_count">Кількість</div>
                             <div class="header_bascet_price">Вартість</div>
                         </div>
-                        <a class="header_bascet_cross">
+                        <div class="header_bascet_cross">
                             <img src="./Image/icon/cross.svg" alt="cross">
-                        </a>
+                        </div>
                     </div>
                 </header>
 
@@ -103,7 +103,7 @@
 
     </main>
 
-    <footer class="footer">
+    <footer id="footer">
         <div class="footer_contacts">
             <div>Контактна інформація:</div>
             <div>
